--- a/package.json
+++ b/package.json
@@ -1,46 +1,18 @@
 {
-  "name": "react-simple-boilerplate",
-  "version": "1.0.0",
-  "description": "Simple and lightweight Boilerplate for ReactJS projects",
-  "scripts": {
-    "lint": "eslint src",
-    "start": "node server.js"
-  },
-  "repository": "https://github.com/noahlotzer/react-simple-boilerplate.git",
-  "keywords": [
-    "react",
-    "reactjs",
-    "boilerplate",
-    "reload",
-    "live",
-    "edit",
-    "webpack"
-  ],
-  "author": "Noah-Jerome Lotzer <noah.lotzer@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/noahlotzer/react-simple-boilerplate/issues"
-  },
-  "homepage": "https://github.com/noahlotzer/react-simple-boilerplate",
-  "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^3.19.0",
-    "eslint-plugin-react": "^6.10.3",
-    "node-sass": "^4.5.2",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.1",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.4"
-  },
+  "name": "infinity",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "babel-loader": "^7.0.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1"
   },
-  "main": "server.js"
+  "devDependencies": {
+    "react-scripts": "1.0.17"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
