--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "axios": "^0.17.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-html-parser": "^2.0.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "showdown": "^1.8.2"
   },
   "devDependencies": {
