--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "infinity",
   "version": "0.1.0",
+  "homepage": "https://infamily.github.io",
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
@@ -13,11 +14,13 @@
     "showdown": "^1.8.2"
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build&&gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
