--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
     "react-html-parser": "^2.0.1",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "showdown": "^1.8.2"
   },
   "devDependencies": {
