--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
+    "sha1": "^1.1.1",
     "showdown": "^1.8.2"
   },
   "devDependencies": {
