--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "http://infinity.family",
   "private": true,
   "dependencies": {
+    "add": "^2.0.6",
     "axios": "^0.17.1",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
@@ -17,11 +18,13 @@
     "react-router-redux": "^4.0.8",
     "react-select": "^1.1.0",
     "react-sortable-tree": "^1.8.1",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "sha1": "^1.1.1",
-    "showdown": "^1.8.2"
+    "showdown": "^1.8.2",
+    "yarn": "^1.3.2"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
