--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "infinity",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "homepage": "http://infinity.family",
   "private": true,
   "dependencies": {
-    "add": "^2.0.6",
     "axios": "^0.17.1",
-    "create-react-class": "^15.6.3",
     "moment": "^2.21.0",
-    "node-sass-chokidar": "^1.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
-    "react-credit-card": "^0.20.0",
     "react-credit-cards": "^0.7.0",
     "react-dom": "^16.1.1",
     "react-html-parser": "^2.0.1",
@@ -27,7 +23,6 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
-    "sha1": "^1.1.1",
     "showdown": "^1.8.2",
     "yarn": "^1.3.2"
   },
@@ -36,12 +31,10 @@
     "react-scripts": "1.0.17"
   },
   "scripts": {
-    "start": "react-scripts start&npm run watch-css",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "npm run build&&gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive"
+    "eject": "react-scripts eject"
   }
 }
