--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "showdown": "^1.8.2",
+    "tld": "^0.0.2",
     "yarn": "^1.3.2"
   },
   "devDependencies": {
