--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react-dom": "^16.1.1",
     "react-html-parser": "^2.0.1",
     "react-infinite-scroller": "^1.1.2",
+    "react-quill": "^1.2.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-select": "^1.1.0",
     "react-stripe-checkout": "^2.6.3",
+    "react-tinymce": "^0.7.0",
     "react-tooltip": "^3.4.2",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
