--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-thunk": "^2.2.0",
     "showdown": "^1.8.2",
     "tld": "^0.0.2",
+    "turndown": "^4.0.1",
     "yarn": "^1.3.2"
   },
   "devDependencies": {
