--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "gh-pages": "^1.1.0",
+    "husky": "^0.14.3",
     "prettier": "^1.12.1",
     "react-scripts": "1.0.17"
   },
@@ -52,6 +53,7 @@
     "deploy": "npm run build&&gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "precommit": "pretty-quick --staged"
+    "precommit": "pretty-quick --staged",
+    "pretty-quick": "pretty-quick"
   }
 }
