--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gh-pages": "^1.1.0",
     "husky": "^0.14.3",
     "prettier": "^1.12.1",
+    "pretty-quick": "^1.4.1",
     "react-scripts": "1.0.17"
   },
   "scripts": {
