--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "lodash": "^4.17.10",
     "moment": "^2.22.0",
     "payment": "^2.3.0",
     "prop-types": "^15.6.0",
