--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-html-parser": "^2.0.1",
     "react-infinite-scroller": "^1.1.2",
     "react-markdown-editor": "^0.6.2",
+    "react-notification-system": "^0.2.17",
     "react-quill": "^1.2.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
