--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "classnames": "^2.2.5",
     "lodash": "^4.17.10",
     "moment": "^2.22.0",
     "payment": "^2.3.0",
@@ -16,6 +17,7 @@
     "react-dom": "^16.1.1",
     "react-html-parser": "^2.0.1",
     "react-infinite-scroller": "^1.1.2",
+    "react-intl": "^2.4.0",
     "react-markdown-editor": "^0.6.2",
     "react-masonry-css": "^1.0.11",
     "react-notification-system": "^0.2.17",
