--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-infinite-scroller": "^1.1.2",
     "react-intl": "^2.4.0",
     "react-markdown-editor": "^0.6.2",
+    "react-masonry-component": "^6.2.0",
     "react-masonry-css": "^1.0.11",
     "react-notification-system": "^0.2.17",
     "react-quill": "^1.2.7",
