--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "allowSyntheticDefaultImports": false,
-    "baseUrl": "./",
+    "baseUrl": "./src/",
     "paths": {
+      "*": ["*"],
       "images/*": ["src/images/*"],
       "components/*": ["src/components/*"],
       "services/*": ["src/services/*"],
       "scenes/*": ["src/scenes/*"],
-      "configs/*": ["src/configs/*"],
-    }
+      "configs/*": ["src/configs/*"]
+    },
+    "target": "es2017",
+    "allowSyntheticDefaultImports": false
   },
   "exclude": ["node_modules", "build"]
 }
