--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "classnames": "^2.2.5",
     "husky": "^0.14.3",
     "lodash": "^4.17.10",
+    "marked": "^0.4.0",
     "payment": "^2.3.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
