--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "classnames": "^2.2.5",
     "husky": "^0.14.3",
     "lodash": "^4.17.10",
-    "marked": "^0.4.0",
     "payment": "^2.3.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
@@ -36,6 +35,7 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
+    "remove-markdown": "^0.3.0",
     "showdown": "^1.8.2",
     "tld": "^0.0.2",
     "turndown": "^4.0.1",
