--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "jest-localstorage-mock": "^2.2.0",
     "prettier": "^1.12.1",
     "pretty-quick": "^1.4.1",
+    "react-doc-generator": "^1.2.5",
     "react-scripts": "1.0.17"
   },
   "scripts": {
+    "doc": "react-doc-generator src -o DOCUMENTATION.md",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "npm run build&&gh-pages -d build",
