--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-markdown-editor": "^0.6.2",
     "react-masonry-css": "^1.0.11",
     "react-notification-system": "^0.2.17",
+    "react-particles-js": "^2.2.0",
     "react-quill": "^1.2.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
@@ -47,7 +48,6 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
     "eslint": "^4.19.1",
-    "prettier": "^1.12.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.11.0",
@@ -56,6 +56,7 @@
     "eslint-plugin-react": "^7.7.0",
     "gh-pages": "^1.1.0",
     "jest-localstorage-mock": "^2.2.0",
+    "prettier": "^1.12.1",
     "pretty-quick": "^1.4.1",
     "react-doc-generator": "^1.2.5",
     "react-scripts": "1.0.17"
