--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lodash": "^4.17.10",
     "payment": "^2.3.0",
     "prop-types": "^15.6.0",
+    "query-string": "^6.1.0",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
     "react-credit-cards": "^0.7.0",
