--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Infinity Family",
-  "name": "Infinity Family",
+  "short_name": "Infinity",
+  "name": "Infinity",
   "icons": [
     {
       "src": "if_icon.png",
