--- a/package.json
+++ b/package.json
@@ -64,15 +64,15 @@
     "react-scripts": "2.0.0"
   },
   "scripts": {
-    "doc": "react-doc-generator src -o DOCUMENTATION.md",
+    "doc": "REACT_APP_API_SERVER=inf.wefindx.com react-doc-generator src -o DOCUMENTATION.md",
     "start": "REACT_APP_API_SERVER=inf.wefindx.com react-scripts start",
     "build": "REACT_APP_API_SERVER=inf.wefindx.com react-scripts build",
-    "deploy": "npm run build&&gh-pages -d build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "precommit": "pretty-quick --staged",
-    "pretty-quick": "pretty-quick",
-    "test:debug": "react-scripts --inspect-brk test --runInBand --env=jsdom"
+    "deploy": "REACT_APP_API_SERVER=inf.wefindx.com npm run build&&gh-pages -d build",
+    "test": "REACT_APP_API_SERVER=inf.wefindx.com react-scripts test --env=jsdom",
+    "eject": "REACT_APP_API_SERVER=inf.wefindx.com react-scripts eject",
+    "precommit": "REACT_APP_API_SERVER=inf.wefindx.com pretty-quick --staged",
+    "pretty-quick": "REACT_APP_API_SERVER=inf.wefindx.com pretty-quick",
+    "test:debug": "REACT_APP_API_SERVER=inf.wefindx.com react-scripts --inspect-brk test --runInBand --env=jsdom"
   },
   "browserslist": [
     ">0.2%",
