--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "axios": "^0.17.1",
     "classnames": "^2.2.6",
+    "eslint": "^5.8.0",
+    "eslint-plugin-jest": "^21.26.2",
     "husky": "^0.14.3",
     "lodash": "^4.17.11",
     "payment": "^2.3.0",
@@ -46,7 +48,7 @@
     "yarn": "^1.3.2"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^10.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
@@ -73,6 +75,9 @@
     "precommit": "pretty-quick --staged",
     "pretty-quick": "pretty-quick",
     "test:debug": "react-scripts --inspect-brk test --runInBand --env=jsdom"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint"
   },
   "browserslist": [
     ">0.2%",
