--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
   },
   "scripts": {
     "doc": "react-doc-generator src -o DOCUMENTATION.md",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "deploy": "npm run build&&gh-pages -d build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
+    "build": "SKIP_PREFLIGHT_CHECK=true react-scripts build",
+    "deploy": "SKIP_PREFLIGHT_CHECK=true npm run build&&gh-pages -d build",
+    "test": "SKIP_PREFLIGHT_CHECK=true react-scripts test --env=jsdom",
+    "eject": "SKIP_PREFLIGHT_CHECK=true react-scripts eject",
     "precommit": "pretty-quick --staged",
     "pretty-quick": "pretty-quick",
     "test:debug": "react-scripts --inspect-brk test --runInBand --env=jsdom"
